UX updates: spacing. Fixes XR button and broken variant switching.

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -30,6 +30,7 @@
   width: 92%;
   position: absolute;
   top: 0;
+  bottom: 3.2rem;
   padding: 0 1.5rem 0 3rem;
   border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
   border-style: solid;
@@ -140,6 +141,11 @@ quick-add-modal .product__media-list .deferred-media {
   width: 100%;
 }
 
+quick-add-modal .product__xr-button {
+  width: calc(100% - 1.5rem);
+  margin-left: 0;
+}
+
 @media screen and (max-width: 749px) {
   quick-add-modal .product__media-wrapper slider-component:not(.thumbnail-slider--no-slide) {
     margin-right: 0;
@@ -185,6 +191,14 @@ quick-add-modal .product__title > h1 {
 
 quick-add-modal .product__title > a {
   display: block;
+  text-decoration: none;
+}
+
+quick-add-modal .product__title > a:hover {
+  color: rgb(var(--color-foreground));
+  text-decoration: underline;
+  text-underline-offset: 0.2rem;
+  text-decoration-thickness: 0.3rem;
 }
 
 quick-add-modal .product__view-details {
